--- a/lang/en.json
+++ b/lang/en.json
@@ -71,6 +71,7 @@
     "snack_update" : "Please enter valid credentials",
     "snack_map" : "Tap on your clinic location first",
     "snack_map_patient" : "Please add your current location",
+    "snack_verification" : "Verify your email first",
     "age_message":"Please , Enter your age",
     "age_message_error":"Age should be from 0 to 130",
     "gender_message":"Please , Select a gender",
