Welcome to cura

--- a/lang/en.json
+++ b/lang/en.json
@@ -233,7 +233,7 @@
     "ear" : "Ear",
     "skin" : "Skin Problems",
     "gynecology" : "Female Menstrual and Reporductive Health",
-    "uro" : "Urinary Track",
+    "uro" : "Urinary Tract",
     "male_genital" : "Male Genital Health",
     "eye" : "Eye Problems",
     "Breast" : "Breast Problems",
