--- a/lang/en.json
+++ b/lang/en.json
@@ -104,7 +104,7 @@
     "does_not_have_account" : "Does not have account?",
     "does_have_account" : "Already have an account?",
     "doctor_form" : "Doctor Form",
-    "name" : "Full Name in Arabic",
+    "name" : "Name (As It Appaers On Clinic Signboard)",
     "name_validator" : "Enter Your Name in Arabic",
     "speciality" : "Speciality",
     "speciality_validator" : "Choose Your Speciality",
@@ -289,7 +289,7 @@
     "abdominal pain":"Abdominal pain",
     "vomiting":"Vomiting",
     "constipation":"Constipation",
-    "bloody diarrhea":"Vloody diarrhea",
+    "bloody diarrhea":"Bloody diarrhea",
     "watery diarrhea":"Watery diarrhea",
     "dysphagia":"Dysphagia",
     "odynophagia":"Odynophagia",
