--- a/lang/en.json
+++ b/lang/en.json
@@ -186,7 +186,7 @@
     "female" : "Female",
     "age" : "Enter your age in Years",
     "snack_age" : "Please, Enter your Age",
-    "patient_complain" : "Complains",
+    "patient_complain" : "Complaints",
     "main_complain" : "The Main Complain",
     "other_complain" : "Do you have another Complain",
     "complain_area" : "Choose the area of your Complain",
