last searched doctor

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -15,7 +15,7 @@
     "":"",
     "data_error":"حدث خطأ اثناء التسجيل , قم بتحديث معلوماتك لطفا",
     "prof_error":"خطأ !!",
-    
+    "last_searched_doctor" : "اخر نتيجه بحث",
 
 "regions":"---------------------------------",
     "Baghdad":"بغداد , العراق",
