--- a/lang/ar.json
+++ b/lang/ar.json
@@ -2,8 +2,8 @@
 
 "common" : "=======================================",
     "next": "التالي",
-    "english" : "انكليزي",
-    "arabic" : "عربي",
+    "english" : "English",
+    "arabic" :"العربية",
     "search" :  "ابحث",
     "submit" : "تم",
     "update" : "Update",
