--- a/lang/en.json
+++ b/lang/en.json
@@ -2,7 +2,7 @@
 "common" : "=======================================",
     "next": "Next",
     "english" : "ُEnglish",
-    "arabic" : "Arabic",
+    "arabic" : "العربية",
     "search" :  "Search",
     "submit" : "Submit",
     "update" : "Update",
