--- a/lang/en.json
+++ b/lang/en.json
@@ -187,13 +187,13 @@
     "age" : "Enter your age in Years",
     "snack_age" : "Please, Enter your Age",
     "patient_complain" : "Complaints",
-    "main_complain" : "The Main Complain",
-    "other_complain" : "Do you have another Complain",
-    "complain_area" : "Choose the area of your Complain",
-    "choose_complain" : "Choose your Complain",
-    "first_choose_complain" : "First choose your Complain ",
-    "add_complains" : "Additional Complains",
-    "result_speciality" : "Your complains are associated with the Following Speciality:",
+    "main_complain" : "The Main Complaint",
+    "other_complain" : "Do you have another Complaint",
+    "complain_area" : "Choose the area of your Complaint",
+    "choose_complain" : "Choose your Complaint",
+    "first_choose_complain" : "First choose your Complaint ",
+    "add_complains" : "Additional Complaints",
+    "result_speciality" : "Your complaints are associated with the Following Speciality:",
     "get_location" : "To Continue, You Must Specify your current location through either:",
     "auto_location" : "Auto Device Location",
     "speciality_result" : "Medical Speciality",
