--- a/lang/ar.json
+++ b/lang/ar.json
@@ -23,6 +23,25 @@
     "Southern Region":"المنطقة الجنوبية في العراق",
     "Western Region":"المنطقة الغربية في العراق",
     "Middle Region":"المنطقة الوسطى في العراق",
+    "Al Anbar":"الانبار",
+    "Babil":"بابل",
+    "Basra":"البصرة",
+    "Dhi Qar":"ذي قار",
+    "Al Qadisiyyah":"القادسية",
+    "Diyala":"ديالى",
+    "Duhok":"دهوك",
+    "Erbil":"اربيل",
+    "Karbala":"كربلاء",
+    "Kirkuk":"كركوك",
+    "Maysan":"ميسان",
+    "Muthanna":"المثنى",
+    "Najaf":"النجف",
+    "Nineveh":"نينوى",
+    "Saladin":"صلاح الدين",
+    "Sulaymaniyah":"السليمانية",
+    "Wasit":"واسط",
+
+
 
 "weekdays" : "----------------------------",
     "sun" : "ح",
