--- a/lang/en.json
+++ b/lang/en.json
@@ -22,6 +22,25 @@
     "Southern Region":"Southern Region of Iraq",
     "Western Region":"Western Region of Iraq",
     "Middle Region":"Middle Region of Iraq",
+    "Al Anbar":"Al Anbar",
+    "Babil":"Babil",
+    "Basra":"Basra",
+    "Dhi Qar":"Dhi Qar",
+    "Al Qadisiyyah":"Al Qadisiyyah",
+    "Diyala":"Diyala",
+    "Duhok":"Duhok",
+    "Erbil":"Erbil",
+    "Karbala":"Karbala",
+    "Kirkuk":"Kirkuk",
+    "Maysan":"Maysan",
+    "Muthanna":"Muthanna",
+    "Najaf":"Najaf",
+    "Nineveh":"Nineveh",
+    "Saladin":"Saladin",
+    "Sulaymaniyah":"Sulaymaniyah",
+    "Wasit":"Wasit",
+
+
 
 "weekdays" : "----------------------------",
     "sun" : "S",
@@ -204,7 +223,8 @@
     "southern_region" : "Southern Region of Iraq",
     "centeral_region" : "Central Region of Iraq",
     "western_region" : "Western Region of Iraq",
-    "patient_map_title" : "Tab on you location",
+    "correction":"     its tap not tab",
+    "patient_map_title" : "Tap on you location",
     "doctor_location" : "Doctor Location on Map",
     "zoom_in_out":"Zoom in/out with your 2 fingers",
     "zoom_in":"Zoom in by ++ the distance between them",
