one doc for one doctor

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -103,6 +103,7 @@
     "choose 2nd exception day":"حدد اليوم المستثنى الثاني",
     "choose 2nd exception time":"حدد وفت العمل في اليوم المستثنى الثاني",
     "reasign_days":"اعد تحديد ايام العمل",
+    "already_registered":"عذرا , تم تسجيلك مسبقا",
 
 "doctor_page" : "=======================================",
     "home_title" : "اهلا بك في كيورا",
