--- a/lang/en.json
+++ b/lang/en.json
@@ -105,6 +105,7 @@
     "choose 2nd exception day":"Please , choose the second exceprion day",
     "choose 2nd exception time":"Please , choose the time of second excepted day ",
     "reasign_days":"Reasign work days",
+    "already_registered":"Sorry , You are registered already",
 
 "doctor_page" : "=======================================",
     "home_title" : "Welcome to Cura",
