--- a/lang/ar.json
+++ b/lang/ar.json
@@ -104,6 +104,9 @@
     "choose 2nd exception time":"حدد وفت العمل في اليوم المستثنى الثاني",
     "reasign_days":"اعد تحديد ايام العمل",
     "already_registered":"عذرا , تم تسجيلك مسبقا",
+    "can_not_delete":"عذرا , لا يمكن حذف المستخدم",
+    "invalid_address":"عذرا , العنوان غير صالح",
+
 
 "doctor_page" : "=======================================",
     "home_title" : "اهلا بك في كيورا",
@@ -269,13 +272,13 @@
     "cd_HTN" : "ارتفاع ضغط الدم المزمن",
     "cd_DM" : "مرض السكري",
     "cd_heart" : "امراض القلب المزمنه",
-    "cd_heartFailure" : "فشل القلب",
+    "cd_heartFailure" : "عجز القلب",
     "cd_ctd" : "مرض النسيج الضام",
     "cd_ckd" : "امراض الكلى",
     "cd_liver" : "امراض الكبد",
     "cd_intestine" : "امراص الجهاز الهضمي المزمنه",
     "cd_epilepsy" : "مرض الصرع",
-    "cd_cva" : "الجلطه القلبيه",
+    "cd_cva" : "الجلطه الدماغية",
     "cd_thyroid" : "تضخم الغدة الدرقية السابق",
     "cd_lung" : "امراض الرئة المزمنة",
     "cd_copd" : " مرض الرئة الانسدادي المزمن",
