--- a/lang/ar.json
+++ b/lang/ar.json
@@ -18,11 +18,7 @@
     "last_searched_doctor" : "اخر نتيجه بحث",
 
 "regions":"---------------------------------",
-    "Baghdad":"بغداد , العراق",
-    "Northern Region":"المنطقة الشمالية في العراق",
-    "Southern Region":"المنطقة الجنوبية في العراق",
-    "Western Region":"المنطقة الغربية في العراق",
-    "Middle Region":"المنطقة الوسطى في العراق",
+    "Baghdad":"بغداد",
     "Al Anbar":"الانبار",
     "Babil":"بابل",
     "Basra":"البصرة",
@@ -114,7 +110,7 @@
     "home_patient_subtitle" :"اريد البحث عن طبيب",
     "home_doctor_title" : "انا طبيب\n",
     "home_doctor_subtitle" : "اريد التسجيل بالتطبيق",
-    "about_us" : "من نحن",
+    "support" : "الدعم",
     "sign_in": "الدخول",
     "register" : "التسجيل",
     "email": "البريد الالكتروني",
