--- a/lang/ar.json
+++ b/lang/ar.json
@@ -2,11 +2,11 @@
 
 "common" : "=======================================",
     "next": "التالي",
-    "english" : "English",
+    "english" : "الانكليزيه",
     "arabic" :"العربية",
     "search" :  "ابحث",
     "submit" : "تم",
-    "update" : "Update",
+    "update" : "تحديث",
     "language" : "تغيير اللغه",
     "OK" : "تم",
     "ok":"تم",
@@ -18,6 +18,7 @@
     "last_searched_doctor" : "اخر نتيجه بحث",
 
 "regions":"---------------------------------",
+
     "Baghdad":"بغداد",
     "Al Anbar":"الانبار",
     "Babil":"بابل",
