support page locale

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -78,6 +78,15 @@
     "age_gender" : "العمر و الجنس",
 
 
+"support page" : "===============================",
+    "privacy_policy" : "سياسة الخصوصية",
+    "about_us" : "نبذه عنا", 
+    "terms_conditions" : "الأحكام والشروط",
+    "website" : "الموقع الالكتروني",
+    "contact_us" : "اتصل بنا",
+    "footer" : "Footer",
+
+
 
 "Snacks" : "=======================================",
     "snack_sign_in" : "خطا في الدخول",
@@ -102,7 +111,7 @@
     "reasign_days":"اعد تحديد ايام العمل",
     "already_registered":"عذرا , تم تسجيلك مسبقا",
     "can_not_delete":"عذرا , لا يمكن حذف المستخدم",
-    "invalid_address":"عذرا , العنوان غير صالح",
+    "invalid_address":"رجاء, عد الى الصفحه السابقه وحدد عنوان صالح كما موضح بالمثال",
 
 
 "doctor_page" : "=======================================",
