--- a/lang/ar.json
+++ b/lang/ar.json
@@ -111,7 +111,7 @@
     "reasign_days":"اعد تحديد ايام العمل",
     "already_registered":"عذرا , تم تسجيلك مسبقا",
     "can_not_delete":"عذرا , لا يمكن حذف المستخدم",
-    "invalid_address":"رجاء, عد الى الصفحه السابقه وحدد عنوان صالح كما موضح بالمثال",
+    "invalid_address":"لطفا , عد الى الصفحه السابقه وحدد عنوان صالح كما موضح بالمثال",
 
 
 "doctor_page" : "=======================================",
