--- a/lang/ar.json
+++ b/lang/ar.json
@@ -116,7 +116,7 @@
     "reasign_days":"اعد تحديد ايام العمل",
     "already_registered":"عذرا , تم تسجيلك مسبقا",
     "can_not_delete":"عذرا , لا يمكن حذف المستخدم",
-    "invalid_address":"رجاء, عد الى الصفحه السابقه وحدد عنوان صالح كما موضح بالمثال",
+    "invalid_address":"لطفا , عد الى الصفحه السابقه وحدد عنوان صالح كما موضح بالمثال",
 
 
 "doctor_page" : "=======================================",
@@ -332,7 +332,7 @@
     "other git problems":"مشاكل هضمية اخرى",
     "abdominal distension":"انتفاخ البطن",
     "bleeding per rectum":"نزف من المقعد|المخرج",
-    "nausea":"غثيان|لعبان نفس",
+    "nausea":"غثيان",
     "hematemesis":"تقيؤ دموي",
     "malena":"خروج اسود اللون",
 
@@ -345,7 +345,7 @@
 
 "Neuro" : "=========================================",
     "coma":"غيبوبة",
-    "tremer":"ارتجاف|رعشة",
+    "tremer":"ارتجاف|ارتعاش",
     "fit":"نوبة الصرع",
     "abnormal movement":"حركات غريبة",
     "spasm":"تشنجات",
@@ -381,7 +381,7 @@
     "joint pain":"الم المفاصل غير المسبوق باصابة",
     "deformity":"تشوهات العظام والمفاصل",
     "joint swelling":"تورم المفصل",
-    "limitation of movement":"تيبس المفصل",
+    "limitation of movement":"تصلب المفصل",
     "fracture":"كسر",
     "limb pain":"الم في الاطراف",
     "dislocation":"خلع المفاصل",
@@ -413,7 +413,7 @@
     "hand deformity":"تشوهات اليد",
     "other hand problems":"مشاكل اخرى في اليد",
     "hand swelling":"تورم اليد",
-    "hand lump":"النتفاخ|ورمة|في اليد",
+    "hand lump":"انتفاخ|زائدة لحمية في اليد",
 
 "lowerlimb" : "=========================================",
     "bilateral leg edema":" تورم كلا القدمين والساقين",
@@ -426,7 +426,7 @@
 
 "others" : "=========================================",
     "sweating":"التعرق الزائد",
-    "fever":"الحمى|السخونة",
+    "fever":"الحمى",
     "heat sensation":"الشعور بحرارة الجو اثناء البرد",
     "ulcer":"تقرحات ",
     "insomnia":"ارق|عدم القدرة على النوم",
@@ -527,7 +527,7 @@
     "pain during cycle":"الم اثناء الحيض",
     "postmenopausal bleeding":"النزف بعد انقطاع الحيض",
     "other gynecological and obstetrical problems":"مشاكل نسائية اخرى",
-    "miscarriage":"اسقاط الحمل",
+    "miscarriage":"الاجهاض",
 
 "uro/kidney" : "=========================================",
     "incontinence":"السلس|عدم السيطرة على الادرار",
