--- a/lang/ar.json
+++ b/lang/ar.json
@@ -287,7 +287,7 @@
     "cd_ctd" : "مرض النسيج الضام",
     "cd_ckd" : "امراض الكلى",
     "cd_liver" : "امراض الكبد",
-    "cd_intestine" : "امراص الجهاز الهضمي المزمنه",
+    "cd_intestine" : "امراض الجهاز الهضمي المزمنه",
     "cd_epilepsy" : "مرض الصرع",
     "cd_cva" : "الجلطه الدماغية",
     "cd_thyroid" : "تضخم الغدة الدرقية السابق",
