--- a/lang/ar.json
+++ b/lang/ar.json
@@ -2,7 +2,7 @@
 
 "common" : "=======================================",
     "next": "التالي",
-    "english" : "الانكليزيه",
+    "english" : "English",
     "arabic" :"العربية",
     "search" :  "ابحث",
     "submit" : "تم",
