--- a/lang/ar.json
+++ b/lang/ar.json
@@ -238,13 +238,8 @@
     "zoom_in_out":"التكبير او التصغير ممكن باستخدام الاصابع",
     "zoom_in":"التكبير بزيادة المسافة بين الاصبعين",
     "zoom_out":"التصغير بتقليل المسافة بين الاصبعين",
-    
-
-
-
-
-
-
+    "search_warning":"عذرا !",
+    "search_error":"لم يتم البحث عن طبيب مسبقا",
 
 
 
