--- a/lang/ar.json
+++ b/lang/ar.json
@@ -100,7 +100,7 @@
     "snack_update" : "اضف معلومات صحيحه اولا",
     "snack_map" : "حدد موقع عيادتك اولا",
     "snack_map_patient" : "لطفا حدد موقعك اولا",
-    "snack_verification" : "تحقق من الايميل اولا",
+    "snack_verification" : "تحقق من بريدك الالكتروني اولا",
     "age_message":"حدد عمرك لطفا",
     "age_message_error":"يجب ان يكون العمر بين 0 و 130 عام",
     "gender_message":"حدد الجنس لطفا",
@@ -240,6 +240,7 @@
     "zoom_out":"التصغير بتقليل المسافة بين الاصبعين",
     "search_warning":"عذرا !",
     "search_error":"لم يتم البحث عن طبيب مسبقا",
+    "age_format":"الارقام يجب ان تكون من 0 الي 9",
 
 
 
