--- a/lang/en.json
+++ b/lang/en.json
@@ -243,7 +243,7 @@
     "zoom_out":"Zoom out by - - the distance between them",
     "search_warning":"Sorry !",
     "search_error":"There is no previous search trial",
-
+    "age_format":"Selected numbers should be from 0 to 9",
 
 
 "body_regions" : "=======================================",
