--- a/lang/ar.json
+++ b/lang/ar.json
@@ -13,7 +13,7 @@
     "google_map" : "خرائط كوكل",
     "Or": " أو ",
     "":"",
-    "data_error":"حدث خطأ اثناء التسجيل , قم بتحديث معلوماتك لطفا",
+    "data_error":"حدث خطأ اثناء التسجيل , قم بتحديث معلوماتك لطفا ، ثم فم بتسجيل الدخول",
     "prof_error":"خطأ !!",
     "last_searched_doctor" : "اخر نتيجه بحث",
 
@@ -182,6 +182,7 @@
     "predelete_password":"ادخل كلمة المرور",
     "delete":"حذف",
     "delete_user":"حذف المستخدم",
+    "re_sign":"بعدها قم بتسجيل الدخول",
 
 "specialities" : "=======================================",
     "Cardiologist" : "قلبيه",
