--- a/lang/en.json
+++ b/lang/en.json
@@ -12,7 +12,7 @@
     "google_map" : "Google Map",
     "Or": " Or ",
     "":"",
-    "data_error":"An error had occurred , please update your information",
+    "data_error":"An error had occurred , please update your information and sign in again",
     "prof_error":"Error !!",
     "last_searched_doctor" : "Last Searched Doctor",
 
@@ -178,7 +178,7 @@
     "predelete_password":"Enter password",
     "delete":"delete",
     "delete_user":"Delete account",
-    
+    "re_sign":"And sign in again",
 
     
 
