--- a/lang/ar.json
+++ b/lang/ar.json
@@ -241,7 +241,7 @@
     "zoom_out":"التصغير بتقليل المسافة بين الاصبعين",
     "search_warning":"عذرا !",
     "search_error":"لم يتم البحث عن طبيب مسبقا",
-    "age_format":"الارقام يجب ان تكون من 0 الي 9",
+    "age_format":"الارقام يجب ان تكون من 0 الى 9",
 
 
 
