appbartitle size fix

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -16,6 +16,8 @@
     "data_error":"حدث خطأ اثناء التسجيل , قم بتحديث معلوماتك لطفا ، ثم فم بتسجيل الدخول",
     "prof_error":"خطأ !!",
     "last_searched_doctor" : "اخر نتيجه بحث",
+    "log_out" : "الخروج",
+
 
 "regions":"---------------------------------",
 
