--- a/lang/en.json
+++ b/lang/en.json
@@ -15,6 +15,7 @@
     "data_error":"An error had occurred , please update your information and sign in again",
     "prof_error":"Error !!",
     "last_searched_doctor" : "Last Searched Doctor",
+    "log_out" : "Log out",
 
 "regions":"---------------------------------",
     "Baghdad":"Baghdad",
