fixed button height

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
 "common" : "=======================================",
     "next": "Next",
-    "english" : "ُEnglish",
+    "english" : "English",
     "arabic" : "العربية",
     "search" :  "Search",
     "submit" : "Submit",
