patient location page

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -244,7 +244,8 @@
     "search_warning":"عذرا !",
     "search_error":"سجل البحث فارغ",
     "age_format":"الارقام يجب ان تكون من 0 الى 9",
-
+    "invalid location":"لا تتطابق المحافظة المختارة مع الموقع المحدد",
+    "invalid device location":"لا تتطابق المحافظة المختارة مع موقع الجهاز",
 
 
 "body_regions" : "=======================================",
