--- a/lang/ar.json
+++ b/lang/ar.json
@@ -246,6 +246,8 @@
     "age_format":"الارقام يجب ان تكون من 0 الى 9",
     "invalid location":"لا تتطابق المحافظة المختارة مع الموقع المحدد",
     "invalid device location":"لا تتطابق المحافظة المختارة مع موقع الجهاز",
+    "added previously":"تمت الاضافة الى المفضلة مسبقا",
+    "added successfully":"تمت الاضافة الى المفضلة بنجاح",
 
 
 "body_regions" : "=======================================",
@@ -585,6 +587,11 @@
     "breast discharge":"خراج من الثدي",
     "breast lump":"تورم في الثدي",
     "breast skin lesion":"مشاكل جلدية في الثدي",
-    "other breast problems":"مشاكل اخرى في الثدي"
+    "other breast problems":"مشاكل اخرى في الثدي",
+
+
+    "favorite list page":"===========================",
+    "preferred":"المفضلة",
+    "empty list":"عذرا , القائمة المفضلة خالية ..."
 
 }
