--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -455,8 +455,10 @@
     "age_gender": "العمر و الجنس"
   },
   "view_home": {
-    "search_button": "ابحث عن طبيب",
-    "profile_button": "إنشاء حساب"
+    "title": "مرحبا بك في تطبيق كيورا",
+    "search_name": "- يمكنك أيضا البحث عن اسم الطبيب او اختصاصه بالنسبه لرقعتك الجغرافيه",
+    "search_complain": "- إذا كنت تعاني من أعراض مرضيه يمكنك التطبيق من البحث عن الاختصاص الطبي المناسب",
+    "register_doctor": "- إذا كنت طبيب تستطيع عمل حساب بالتطبيق بحيث يمكن للمرضى البحث عن خدماتك"
   },
   "view_favorite_list": {
     "preferred": "المفضلة",
